# rest-api-suite

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
clients/: __init__.py  auth_client.py  base_client.py  users_client.py
config/: __init__.py  settings.py
fixtures/: __init__.py  test_data.py
schemas/: _meta.json  auth_login.json  auth_register.json  created_user.json  user.json  users_list.json
tests/: conftest.py  test_auth.py  test_contracts.py  test_headers.py  test_resilience.py  test_users.py  test_workflow.py
utils/: __init__.py  validators.py
