[project]
name = "rest-api-suite"
version = "1.0.0"
description = "Senior-level REST API automation suite — auth, CRUD, contracts, multi-env"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "pytest==8.3.5",
    "pytest-html==4.1.1",
    "pytest-retry==0.6.2",
    "jsonschema==4.23.0",
    "referencing==0.35.1",
    "python-dotenv==1.0.1",
    "ruff==0.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--html=reports/report.html",
    "--self-contained-html",
    "--retries=2",
    "--retry-delay=1",
]
markers = [
    "auth:     Authentication and registration tests",
    "users:    User CRUD workflow tests",
    "contract: JSON Schema contract validation tests",
    "slow:     Tests that exercise delayed responses or make multiple requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]
